--- a/src/Gemini.Demo/app.config
+++ b/src/Gemini.Demo/app.config
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 
 <configuration>
     <configSections>
@@ -9,7 +9,15 @@
     <startup>
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
     </startup>
-    <runtime>
+    <!--<runtime>
+        <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+            <dependentAssembly>
+                <assemblyIdentity name="System.IO.Compression" publicKeyToken="b77a5c561934e089" culture="neutral" />
+                <bindingRedirect oldVersion="0.0.0.0-4.1.2.0" newVersion="4.1.2.0" />
+            </dependentAssembly>
+        </assemblyBinding>
+    </runtime>-->
+    <!--<runtime>
         <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
             <dependentAssembly>
                 <assemblyIdentity name="System.Windows.Interactivity" publicKeyToken="31bf3856ad364e35" culture="neutral" />
@@ -60,7 +68,7 @@
                 <bindingRedirect oldVersion="0.0.0.0-4.0.1.1" newVersion="4.0.1.1" />
             </dependentAssembly>
         </assemblyBinding>
-    </runtime>
+    </runtime>-->
     <userSettings>
         <Gemini.Demo.Properties.Settings>
             <setting name="ConfirmExit" serializeAs="String">
