--- a/src/Gemini.Modules.CodeCompiler/app.config
+++ b/src/Gemini.Modules.CodeCompiler/app.config
@@ -1,7 +1,7 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 
 <configuration>
-    <runtime>
+    <!--<runtime>
         <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
             <dependentAssembly>
                 <assemblyIdentity name="Xceed.Wpf.AvalonDock" publicKeyToken="3e4669d2f30244f4" culture="neutral" />
@@ -48,7 +48,7 @@
                 <bindingRedirect oldVersion="0.0.0.0-4.0.1.1" newVersion="4.0.1.1" />
             </dependentAssembly>
         </assemblyBinding>
-    </runtime>
+    </runtime>-->
     <startup>
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
     </startup>
