--- a/src/Gemini.Modules.CodeEditor/Gemini.Modules.CodeEditor.csproj
+++ b/src/Gemini.Modules.CodeEditor/Gemini.Modules.CodeEditor.csproj
@@ -39,6 +39,7 @@
     <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="PresentationFramework" />
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.Composition" />
     <Reference Include="System.Xml" />
